# Compiler_Project

./: CMakeLists.txt  Phase3_Req.md  lex.l  syntax.y
include/: ir_gen.h  parse_tree.h  semantic.h  symbol.h  type.h  yyerror_ow.h
src/: ir_gen.cpp  parse_tree.c  semantic.c  symbol.c  type.c  yyerror_ow.c
test/: test_3_r01.ir  test_3_r01.spl  test_3_r02.ir  test_3_r02.spl  test_3_r03.ir  test_3_r03.spl  test_3_r04.ir  test_3_r04.spl  test_3_r05.ir  test_3_r05.spl  test_3_r06.ir  test_3_r06.spl
tests/: test.out  test.spl  test.tre  test_3_r01.tre  test_3_r06.out
